make-a-wish-salesforce/src/objects/Guardian_Signature__c.object
<CustomObject>
    <description>Junction object between &apos;Wish Affiliation&apos; and &apos;Required Signature&apos;</description>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Looks up to the related &apos;Wish Required Signature&apos; record.</description>
        <label>Signature</label>
        <referenceTo>Wish_Required_Signature__c</referenceTo>
        <relationshipLabel>Signing on Behalf Of (Guardian Signature)</relationshipLabel>
        <relationshipName>Guardian_Signatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signee_Name__c</fullName>
        <description>The name of the person on whose behalf the signature is made; retrieved via the Wish Affiliation.</description>
        <formula>Signing_on_Behalf_Of__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To change this field, you must change the Wish Affiliation.</inlineHelpText>
        <label>Signee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signee_Name_text__c</fullName>
        <description>The name of the person on whose behalf the signature is made, e.g. the child being signed for in the Guardian Signature. In contrast to Signee_Name__c, this one is just a text field (the other one is hyperlinked to the contact record).</description>
        <formula>Signing_on_Behalf_Of__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Signing_on_Behalf_Of__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signee Name (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Name__c</fullName>
        <description>The person who signed the Wish Required Signature. To change this field, you must change the &quot;Signature&quot; field.</description>
        <formula>Signature__r.Wish_Affiliation__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To change this field, you must change the &quot;Signature&quot; field.</inlineHelpText>
        <label>Signer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_on_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to the related Wish Affiliation (Case+Contact) record.</description>
        <label>Signing on Behalf Of</label>
        <referenceTo>Wish_Affiliation__c</referenceTo>
        <relationshipLabel>Guardian Signatures</relationshipLabel>
        <relationshipName>Guardian_Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Guardian Signature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Signer_Name__c</columns>
        <columns>Signee_Name__c</columns>
        <columns>Signature__c</columns>
        <columns>Signing_on_Behalf_Of__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GS-{00000}</displayFormat>
        <label>Guardian Signature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guardian Signatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>